# LSTM_Forecasting

./: README.md  pyproject.toml
data/: forward_filled_merged_data.csv
data/bloomberg/: historical_prices_spx.csv  index_metrics_CONCCONF.csv  index_metrics_NAPMPMI.csv  index_metrics_SPX.csv  index_metrics_USGG10YR.csv  index_metrics_VIX.csv
src/: LSTM_SW.py  data.py  lstm_favorable_features.py  model_arima.py
