[tool.poetry]
name = "data-for-4995"
version = "0.1.0"
description = ""
authors = ["Raji  <111834849+Rajimek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.2.3"
pandas-datareader = "^0.10.0"
yfinance = "^0.2.44"
scikit-learn = "^1.5.2"
pandas-market-calendars = "^4.4.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tensorflow = "^2.18.0"
numpy = "<2.0.0"
statsmodels = "^0.14.4"
pmdarima = "^2.0.4"
ipykernel = "^6.29.5"
imblearn = "^0.0"
hmmlearn = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
